// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features - LN - Common - Ranking - default Should render ranking acu politica 1`] = `
<div>
  <mock-static-validation
    id="LN-acumulado"
  >
    <div
      data-module="tema_ranking"
    >
      <section
        class="box-articles  com-ranking"
        data-block-name="n_ranking"
        data-diagramacion-id="0"
        data-is-block="true"
      >
        <section
          class="mod-headersection  --line"
          role="contentinfo"
        >
          <h3
            class="com-title --l"
          >
            Más leídas de Política
          </h3>
        </section>
        <div
          class="row "
        >
          <ol
            class="com-ordered"
          >
            <li
              class="com-item"
            >
              <article
                class="mod-article toi1 nidNBBXCN42LBFM7DH4Q7USAC3DS4"
                data-event="LinkClick"
                data-id="NBBXCN42LBFM7DH4Q7USAC3DS4"
                data-notaid="NBBXCN42LBFM7DH4Q7USAC3DS4"
                data-pos="toi1"
                data-section="politica"
                data-source="editor"
              >
                <div
                  class="content-media"
                >
                  <section
                    class="mod-media   "
                    role="button"
                  >
                    <figure
                      class="mod-figure --horizontal"
                      role="button"
                    >
                      <a
                        href="/politica/ladronima-la-medida-que-tomo-una-provincia-contra-los-supermercados-de-federico-braun-nid10062022/"
                      >
                        <div
                          class="placeholder "
                        >
                          <img
                            alt="La medida que tomó una provincia contra los supermercados de Federico Braun"
                            class="com-image "
                            decoding="async"
                            height="513"
                            importance="low"
                            loading="lazy"
                            src="https://resizer.glanacion.com/resizer/TQp4GV8ARUpvOKmVtEPW2bphsYU=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/SC66ZEZ4M5EKNAWFPSW77DFILA.jpg"
                            srcset="https://resizer.glanacion.com/resizer/ubIOk65W-Yb-z3LHF7VMgLFOL_Q=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/SC66ZEZ4M5EKNAWFPSW77DFILA.jpg 298w, https://resizer.glanacion.com/resizer/VjJzR_MIjXHENL3EzSA957KWEGM=/318x212/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/SC66ZEZ4M5EKNAWFPSW77DFILA.jpg 318w, https://resizer.glanacion.com/resizer/TQp4GV8ARUpvOKmVtEPW2bphsYU=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/SC66ZEZ4M5EKNAWFPSW77DFILA.jpg 233w, https://resizer.glanacion.com/resizer/0pNL5A49yZE1jz4uhZ62--7pirg=/375x250/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/SC66ZEZ4M5EKNAWFPSW77DFILA.jpg 375w, https://resizer.glanacion.com/resizer/Fta-Ww31NU3aj7vdcG-kfyYsKMo=/320x213/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/SC66ZEZ4M5EKNAWFPSW77DFILA.jpg 320w"
                            width="768"
                          />
                        </div>
                      </a>
                    </figure>
                  </section>
                  
                </div>
                <section
                  class="mod-description"
                >
                  
                  <h3
                    class="com-title --xs"
                  >
                    <a
                      class="com-link"
                      href="/politica/ladronima-la-medida-que-tomo-una-provincia-contra-los-supermercados-de-federico-braun-nid10062022/"
                      title="“Ladrónima”. La medida que tomó una provincia contra los supermercados de Federico Braun"
                    >
                      <em
                        class="com-lead"
                      >
                        “Ladrónima”. 
                      </em>
                      La medida que tomó una provincia contra los supermercados de Federico Braun
                    </a>
                  </h3>
                  <div />
                  
                </section>
              </article>
            </li>
            <li
              class="com-item"
            >
              <article
                class="mod-article toi2 nid2RCHRDFJ5RGIZJYZOQIQS2CMWM"
                data-event="LinkClick"
                data-id="2RCHRDFJ5RGIZJYZOQIQS2CMWM"
                data-notaid="2RCHRDFJ5RGIZJYZOQIQS2CMWM"
                data-pos="toi2"
                data-section="politica"
                data-source="editor"
              >
                <div
                  class="content-media"
                >
                  <section
                    class="mod-media   "
                    role="button"
                  >
                    <figure
                      class="mod-figure --horizontal"
                      role="button"
                    >
                      <a
                        href="/politica/la-trastienda-de-la-cumbre-un-mensaje-que-sacudio-el-ambiente-y-la-reaccion-de-biden-a-las-palabras-nid09062022/"
                      >
                        <div
                          class="placeholder "
                        >
                          <img
                            alt="Un mensaje que sacudió el ambiente y la reacción de Biden a las palabras de Fernández"
                            class="com-image "
                            decoding="async"
                            height="513"
                            importance="low"
                            loading="lazy"
                            src="https://resizer.glanacion.com/resizer/vN-nXe3pCaDXOQb60O7MF0aT3HY=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/7SRTWTXGOZEEPNHOCAJSKWA7XM.jpg"
                            srcset="https://resizer.glanacion.com/resizer/UovdcQVnzKsjVwk1Q3LAY5RL9zc=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/7SRTWTXGOZEEPNHOCAJSKWA7XM.jpg 298w, https://resizer.glanacion.com/resizer/n0kGMOyucXFSWfIgmDZKjj9IOEU=/318x212/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/7SRTWTXGOZEEPNHOCAJSKWA7XM.jpg 318w, https://resizer.glanacion.com/resizer/vN-nXe3pCaDXOQb60O7MF0aT3HY=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/7SRTWTXGOZEEPNHOCAJSKWA7XM.jpg 233w, https://resizer.glanacion.com/resizer/U7NPK635xNFGziTh5Ns7_pecrQg=/375x250/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/7SRTWTXGOZEEPNHOCAJSKWA7XM.jpg 375w, https://resizer.glanacion.com/resizer/-No409dspo6uxbPBzzWzt4eFWXQ=/320x213/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/7SRTWTXGOZEEPNHOCAJSKWA7XM.jpg 320w"
                            width="768"
                          />
                        </div>
                      </a>
                    </figure>
                  </section>
                  
                </div>
                <section
                  class="mod-description"
                >
                  
                  <h3
                    class="com-title --xs"
                  >
                    <a
                      class="com-link"
                      href="/politica/la-trastienda-de-la-cumbre-un-mensaje-que-sacudio-el-ambiente-y-la-reaccion-de-biden-a-las-palabras-nid09062022/"
                      title="La trastienda de la cumbre. Un mensaje que sacudió el ambiente y la reacción de Biden a las palabras de Fernández"
                    >
                      <em
                        class="com-lead"
                      >
                        La trastienda de la cumbre. 
                      </em>
                      Un mensaje que sacudió el ambiente y la reacción de Biden a las palabras de Fernández
                    </a>
                  </h3>
                  <div />
                  
                </section>
              </article>
            </li>
            <li
              class="com-item"
            >
              <article
                class="mod-article toi3 nidKU7RUAX7EBHDLKC7SYD6RLQUQM"
                data-event="LinkClick"
                data-id="KU7RUAX7EBHDLKC7SYD6RLQUQM"
                data-notaid="KU7RUAX7EBHDLKC7SYD6RLQUQM"
                data-pos="toi3"
                data-section="politica"
                data-source="editor"
              >
                <div
                  class="content-media"
                >
                  <section
                    class="mod-media   "
                    role="button"
                  >
                    <figure
                      class="mod-figure --horizontal"
                      role="button"
                    >
                      <a
                        href="/politica/la-ministra-de-mujeres-generos-y-diversidad-defendio-el-uso-del-lenguaje-inclusivo-en-las-escuelas-nid10062022/"
                      >
                        <div
                          class="placeholder "
                        >
                          <img
                            alt="La respuesta de la ministra de Mujeres a la limitación del lenguaje inclusivo en las escuelas porteñas"
                            class="com-image "
                            decoding="async"
                            height="513"
                            importance="low"
                            loading="lazy"
                            src="https://resizer.glanacion.com/resizer/dup8-LkZj_3Ivmo8afb6dlaTZVw=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/5MQAAY5PBFELVAGUYM4IVOSAKM.jpg"
                            srcset="https://resizer.glanacion.com/resizer/LJca44nP_F_w9IDuHr33LUfzkLg=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/5MQAAY5PBFELVAGUYM4IVOSAKM.jpg 298w, https://resizer.glanacion.com/resizer/xRrG8414mYVFrZgN5Te2eOg77cQ=/318x212/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/5MQAAY5PBFELVAGUYM4IVOSAKM.jpg 318w, https://resizer.glanacion.com/resizer/dup8-LkZj_3Ivmo8afb6dlaTZVw=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/5MQAAY5PBFELVAGUYM4IVOSAKM.jpg 233w, https://resizer.glanacion.com/resizer/tw0fWf6-RS9Pt3o4itz8PJ0X-qc=/375x250/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/5MQAAY5PBFELVAGUYM4IVOSAKM.jpg 375w, https://resizer.glanacion.com/resizer/M4dKkD1j7czA2_U2hWj0jJgOr4E=/320x213/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/5MQAAY5PBFELVAGUYM4IVOSAKM.jpg 320w"
                            width="768"
                          />
                        </div>
                      </a>
                    </figure>
                  </section>
                  
                </div>
                <section
                  class="mod-description"
                >
                  
                  <h3
                    class="com-title --xs"
                  >
                    <a
                      class="com-link"
                      href="/politica/la-ministra-de-mujeres-generos-y-diversidad-defendio-el-uso-del-lenguaje-inclusivo-en-las-escuelas-nid10062022/"
                      title="El @, la X y la E. La respuesta de la ministra de Mujeres a la limitación del lenguaje inclusivo en las escuelas porteñas"
                    >
                      <em
                        class="com-lead"
                      >
                        El @, la X y la E. 
                      </em>
                      La respuesta de la ministra de Mujeres a la limitación del lenguaje inclusivo en las escuelas porteñas
                    </a>
                  </h3>
                  <div />
                  
                </section>
              </article>
            </li>
            <li
              class="com-item"
            >
              <article
                class="mod-article toi4 nidDNCXVEN2P5CILNUSO6HAIDRS6A"
                data-event="LinkClick"
                data-id="DNCXVEN2P5CILNUSO6HAIDRS6A"
                data-notaid="DNCXVEN2P5CILNUSO6HAIDRS6A"
                data-pos="toi4"
                data-section="politica"
                data-source="editor"
              >
                <div
                  class="content-media"
                >
                  <section
                    class="mod-media   "
                    role="button"
                  >
                    <figure
                      class="mod-figure --horizontal"
                      role="button"
                    >
                      <a
                        href="/politica/la-rotunda-afirmacion-de-elisa-carrio-si-votas-a-javier-milei-votas-a-un-genocida-nid10062022/"
                      >
                        <div
                          class="placeholder "
                        >
                          <img
                            alt="Carrió trató a Milei de \\"genocida\\" y el economista le contestó"
                            class="com-image "
                            decoding="async"
                            height="513"
                            importance="low"
                            loading="lazy"
                            src="https://resizer.glanacion.com/resizer/KXmiEXurdO_6WCBdyqWST_V_wQA=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/3KNFTRQMMVDP7KS3KR6D6C5DMM.jpg"
                            srcset="https://resizer.glanacion.com/resizer/_72gnuKUfTM7ELV5ifz4FedndNw=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/3KNFTRQMMVDP7KS3KR6D6C5DMM.jpg 298w, https://resizer.glanacion.com/resizer/jYSNlX1zzMijlWs-gyvY5_55HLs=/318x212/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/3KNFTRQMMVDP7KS3KR6D6C5DMM.jpg 318w, https://resizer.glanacion.com/resizer/KXmiEXurdO_6WCBdyqWST_V_wQA=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/3KNFTRQMMVDP7KS3KR6D6C5DMM.jpg 233w, https://resizer.glanacion.com/resizer/QZ6qxxxCkAhxxuyCTJgDTpdERCg=/375x250/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/3KNFTRQMMVDP7KS3KR6D6C5DMM.jpg 375w, https://resizer.glanacion.com/resizer/_U1YmRt4ikLxHTSrwQzOak1NiIc=/320x213/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/3KNFTRQMMVDP7KS3KR6D6C5DMM.jpg 320w"
                            width="768"
                          />
                        </div>
                      </a>
                    </figure>
                  </section>
                  
                </div>
                <section
                  class="mod-description"
                >
                  
                  <h3
                    class="com-title --xs"
                  >
                    <a
                      class="com-link"
                      href="/politica/la-rotunda-afirmacion-de-elisa-carrio-si-votas-a-javier-milei-votas-a-un-genocida-nid10062022/"
                      title="\\"Típica reacción\\". Carrió trató a Milei de \\"genocida\\" y el economista le contestó"
                    >
                      <em
                        class="com-lead"
                      >
                        "Típica reacción". 
                      </em>
                      Carrió trató a Milei de "genocida" y el economista le contestó
                    </a>
                  </h3>
                  <div />
                  
                </section>
              </article>
            </li>
          </ol>
        </div>
      </section>
    </div>
  </mock-static-validation>
</div>
`;

exports[`Features - LN - Common - Ranking - default Should render ranking home 1`] = `
<div>
  <div
    data-module="tema_ranking"
  >
    <section
      class="box-articles  com-ranking"
      data-block-name="n_ranking"
      data-diagramacion-id="0"
      data-is-block="true"
    >
      <section
        class="mod-headersection  --line"
        role="contentinfo"
      >
        <h3
          class="com-title --l"
        >
          Más leídas
        </h3>
      </section>
      <div
        class="row "
      >
        <ol
          class="com-ordered row-gap-tablet-4"
        >
          <li
            class="com-item"
          >
            <article
              class="mod-article toi1 nid6WRVOIVRJRFVVFHF3O7MZGOM24"
              data-id="6WRVOIVRJRFVVFHF3O7MZGOM24"
              data-notaid="6WRVOIVRJRFVVFHF3O7MZGOM24"
              data-pos="toi1"
              data-source="editor"
            >
              <div
                class="content-media"
              >
                <section
                  class="mod-media   "
                  role="button"
                >
                  <figure
                    class="mod-figure --horizontal"
                    role="button"
                  >
                    <a
                      href="/el-mundo/joe-biden-cuestiona-a-volodimir-zelensky-porque-no-quiso-escuchar-sus-advertencias-sobre-una-nid11062022/"
                    >
                      <div
                        class="placeholder "
                      >
                        <img
                          alt="Biden sorprendió con un duro reproche a Zelensky y recibió una contundente respuesta"
                          class="com-image "
                          decoding="async"
                          height="513"
                          importance="low"
                          loading="lazy"
                          src="https://resizer.glanacion.com/resizer/F0XKFSfoqDK67EOpCG4XCm84Weg=/233x155/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/QTNS4ODKVND67CBD2TG4BKBIEE.JPG"
                          srcset="https://resizer.glanacion.com/resizer/I13f1ZisXAPECELnpifWUoyxV6M=/298x198/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/QTNS4ODKVND67CBD2TG4BKBIEE.JPG 298w, https://resizer.glanacion.com/resizer/psupRakUotMyIwxZflDod7daMRE=/318x212/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/QTNS4ODKVND67CBD2TG4BKBIEE.JPG 318w, https://resizer.glanacion.com/resizer/F0XKFSfoqDK67EOpCG4XCm84Weg=/233x155/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/QTNS4ODKVND67CBD2TG4BKBIEE.JPG 233w, https://resizer.glanacion.com/resizer/yPzi1yXHf0SziGT4_Aa1zFV5uh8=/375x250/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/QTNS4ODKVND67CBD2TG4BKBIEE.JPG 375w, https://resizer.glanacion.com/resizer/xlNuPJ8L4aOIc9bkICJXaZg71BA=/320x213/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/QTNS4ODKVND67CBD2TG4BKBIEE.JPG 320w"
                          width="768"
                        />
                      </div>
                    </a>
                  </figure>
                </section>
                
              </div>
              <section
                class="mod-description"
              >
                
                <h3
                  class="com-title --xs"
                >
                  <a
                    class="com-link"
                    href="/el-mundo/joe-biden-cuestiona-a-volodimir-zelensky-porque-no-quiso-escuchar-sus-advertencias-sobre-una-nid11062022/"
                    title="\\"No quiso escuchar\\". Biden sorprendió con un duro reproche a Zelensky y recibió una contundente respuesta"
                  >
                    <em
                      class="com-lead"
                    >
                      "No quiso escuchar". 
                    </em>
                    Biden sorprendió con un duro reproche a Zelensky y recibió una contundente respuesta
                  </a>
                </h3>
                <div />
                
              </section>
            </article>
          </li>
          <li
            class="com-item"
          >
            <article
              class="mod-article toi2 nidCROZBJ5QWBG67HHPBKM42NXEOU"
              data-id="CROZBJ5QWBG67HHPBKM42NXEOU"
              data-notaid="CROZBJ5QWBG67HHPBKM42NXEOU"
              data-pos="toi2"
              data-source="editor"
            >
              <div
                class="content-media"
              >
                <section
                  class="mod-media   "
                  role="button"
                >
                  <figure
                    class="mod-figure --horizontal"
                    role="button"
                  >
                    <a
                      href="/seguridad/pidieron-que-la-justicia-ordene-de-urgencia-el-abastecimiento-de-combustible-al-avion-de-los-iranies-nid11062022/"
                    >
                      <div
                        class="placeholder "
                      >
                        <img
                          alt="Pidieron que la Justicia ordene de urgencia el abastecimiento de combustible al avión de los iraníes"
                          class="com-image "
                          decoding="async"
                          height="513"
                          importance="low"
                          loading="lazy"
                          src="https://resizer.glanacion.com/resizer/yY45ROOLh9NBMAwfSDxeoo19hGw=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2MRHQ6VDLBB6NHAOCRMJ6FCMJY.jpg"
                          srcset="https://resizer.glanacion.com/resizer/EP3JODbJEb1uFPY--IChzqXpLhw=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2MRHQ6VDLBB6NHAOCRMJ6FCMJY.jpg 298w, https://resizer.glanacion.com/resizer/vqgerYGfG-Y5glAgrun0GAHHnU4=/318x212/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2MRHQ6VDLBB6NHAOCRMJ6FCMJY.jpg 318w, https://resizer.glanacion.com/resizer/yY45ROOLh9NBMAwfSDxeoo19hGw=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2MRHQ6VDLBB6NHAOCRMJ6FCMJY.jpg 233w, https://resizer.glanacion.com/resizer/_Z43H-zPqyr2F5czzhLWxde81Ss=/375x250/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2MRHQ6VDLBB6NHAOCRMJ6FCMJY.jpg 375w, https://resizer.glanacion.com/resizer/FVz_uRnoPPgnVqdUjfSGRmYd9Lw=/320x213/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2MRHQ6VDLBB6NHAOCRMJ6FCMJY.jpg 320w"
                          width="768"
                        />
                      </div>
                    </a>
                  </figure>
                </section>
                
              </div>
              <section
                class="mod-description"
              >
                
                <h3
                  class="com-title --xs"
                >
                  <a
                    class="com-link"
                    href="/seguridad/pidieron-que-la-justicia-ordene-de-urgencia-el-abastecimiento-de-combustible-al-avion-de-los-iranies-nid11062022/"
                    title="Ezeiza. Pidieron que la Justicia ordene de urgencia el abastecimiento de combustible al avión de los iraníes"
                  >
                    <em
                      class="com-lead"
                    >
                      Ezeiza. 
                    </em>
                    Pidieron que la Justicia ordene de urgencia el abastecimiento de combustible al avión de los iraníes
                  </a>
                </h3>
                <div />
                
              </section>
            </article>
          </li>
          <li
            class="com-item"
          >
            <article
              class="mod-article toi3 nidWVS4QHJHTJEXXFM5ZXWB2VP4Q4"
              data-id="WVS4QHJHTJEXXFM5ZXWB2VP4Q4"
              data-notaid="WVS4QHJHTJEXXFM5ZXWB2VP4Q4"
              data-pos="toi3"
              data-source="editor"
            >
              <div
                class="content-media"
              >
                <section
                  class="mod-media   "
                  role="button"
                >
                  <figure
                    class="mod-figure --horizontal"
                    role="button"
                  >
                    <a
                      href="/espectaculos/revelan-un-detalle-de-la-supuesta-amante-de-gerard-pique-que-devastaria-a-shakira-nid10062022/"
                    >
                      <div
                        class="placeholder "
                      >
                        <img
                          alt="Revelan un detalle de la supuesta amante de Piqué que devastaría a Shakira"
                          class="com-image "
                          decoding="async"
                          height="513"
                          importance="low"
                          loading="lazy"
                          src="https://resizer.glanacion.com/resizer/D5U6SLbEvmyDZtz_uukWuhgQ5Go=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/JAP5E2RE45GFLC6W6TCF3ZYSQE.jpg"
                          srcset="https://resizer.glanacion.com/resizer/kyNXOnvGL_E-0StZf0JVar4eKjs=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/JAP5E2RE45GFLC6W6TCF3ZYSQE.jpg 298w, https://resizer.glanacion.com/resizer/713cFCa5VPKYtnA3nN_heZzyTAc=/318x212/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/JAP5E2RE45GFLC6W6TCF3ZYSQE.jpg 318w, https://resizer.glanacion.com/resizer/D5U6SLbEvmyDZtz_uukWuhgQ5Go=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/JAP5E2RE45GFLC6W6TCF3ZYSQE.jpg 233w, https://resizer.glanacion.com/resizer/ywniG_EaXXHMOIP8T0nf2_yyPAE=/375x250/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/JAP5E2RE45GFLC6W6TCF3ZYSQE.jpg 375w, https://resizer.glanacion.com/resizer/fJXmC9sYkEskYHs2U1K-i3Lspd8=/320x213/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/JAP5E2RE45GFLC6W6TCF3ZYSQE.jpg 320w"
                          width="768"
                        />
                      </div>
                    </a>
                  </figure>
                </section>
                
              </div>
              <section
                class="mod-description"
              >
                
                <h3
                  class="com-title --xs"
                >
                  <a
                    class="com-link"
                    href="/espectaculos/revelan-un-detalle-de-la-supuesta-amante-de-gerard-pique-que-devastaria-a-shakira-nid10062022/"
                    title="Insólito. Revelan un detalle de la supuesta amante de Piqué que devastaría a Shakira"
                  >
                    <em
                      class="com-lead"
                    >
                      Insólito. 
                    </em>
                    Revelan un detalle de la supuesta amante de Piqué que devastaría a Shakira
                  </a>
                </h3>
                <div />
                
              </section>
            </article>
          </li>
          <li
            class="com-item"
          >
            <article
              class="mod-article toi4 nidUNBDR5OSHNH2JO3A2GJ5CD3FUU"
              data-id="UNBDR5OSHNH2JO3A2GJ5CD3FUU"
              data-notaid="UNBDR5OSHNH2JO3A2GJ5CD3FUU"
              data-pos="toi4"
              data-source="editor"
            >
              <div
                class="content-media"
              >
                <section
                  class="mod-media   "
                  role="button"
                >
                  <figure
                    class="mod-figure --horizontal"
                    role="button"
                  >
                    <a
                      href="/espectaculos/los-8-escalones-del-millon-le-preguntaron-que-haria-si-ganaba-el-dinero-y-su-respuesta-emociono-a-nid11062022/"
                    >
                      <div
                        class="placeholder "
                      >
                        <img
                          alt="Le preguntaron qué haría si ganaba el dinero y su respuesta emocionó a todos"
                          class="com-image "
                          decoding="async"
                          height="513"
                          importance="low"
                          loading="lazy"
                          src="https://resizer.glanacion.com/resizer/W_8rNOf8WBPi-m9lYL5jL0P-PnA=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/L7UKRXBQDFEUTOJPZRB6Q7H7F4.png"
                          srcset="https://resizer.glanacion.com/resizer/-yqpEr69xwpnNrofrhLSGPBshXM=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/L7UKRXBQDFEUTOJPZRB6Q7H7F4.png 298w, https://resizer.glanacion.com/resizer/NqeZddf9Lz3IGluvoMJExYzVuKg=/318x212/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/L7UKRXBQDFEUTOJPZRB6Q7H7F4.png 318w, https://resizer.glanacion.com/resizer/W_8rNOf8WBPi-m9lYL5jL0P-PnA=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/L7UKRXBQDFEUTOJPZRB6Q7H7F4.png 233w, https://resizer.glanacion.com/resizer/FVgDBB-fqDVUsvBdW9EdhbkwyM4=/375x250/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/L7UKRXBQDFEUTOJPZRB6Q7H7F4.png 375w, https://resizer.glanacion.com/resizer/FKmivvlYlrDL9rBCAxCiNehxQ9o=/320x213/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/L7UKRXBQDFEUTOJPZRB6Q7H7F4.png 320w"
                          width="768"
                        />
                      </div>
                    </a>
                  </figure>
                </section>
                
              </div>
              <section
                class="mod-description"
              >
                
                <h3
                  class="com-title --xs"
                >
                  <a
                    class="com-link"
                    href="/espectaculos/los-8-escalones-del-millon-le-preguntaron-que-haria-si-ganaba-el-dinero-y-su-respuesta-emociono-a-nid11062022/"
                    title="Los 8 escalones del millón. Le preguntaron qué haría si ganaba el dinero y su respuesta emocionó a todos"
                  >
                    <em
                      class="com-lead"
                    >
                      Los 8 escalones del millón. 
                    </em>
                    Le preguntaron qué haría si ganaba el dinero y su respuesta emocionó a todos
                  </a>
                </h3>
                <div />
                
              </section>
            </article>
          </li>
        </ol>
      </div>
    </section>
  </div>
</div>
`;

exports[`Features - LN - Common - Ranking - default Should render ranking reverse home 1`] = `
<div>
  <div
    data-module="tema_toi"
  >
    <section
      class="box-articles  "
      data-block-name="h_RankingInversotema-toi"
      data-diagramacion-id="Ranking"
      data-is-block="true"
      id="tema_toi"
    >
      <section
        class="mod-headersection  --line"
        role="contentinfo"
      >
        <h3
          class="com-title --l"
        >
          Te puede interesar
        </h3>
      </section>
      <div
        class="row-gap-tablet-3 "
      >
        <article
          class="mod-article toi1 nidC77SAEJS45C5FIUTDDWMYZMYA4"
          data-event="LinkClick"
          data-id="C77SAEJS45C5FIUTDDWMYZMYA4"
          data-notaid="C77SAEJS45C5FIUTDDWMYZMYA4"
          data-pos="toi1"
          data-section="inverse-home"
          data-source="editor"
        >
          <div
            class="content-media"
          >
            <section
              class="mod-media   "
              role="button"
            >
              <figure
                class="mod-figure --horizontal"
                role="button"
              >
                <a
                  href="/horoscopo/que-personaje-de-la-historia-representa-mejor-a-cada-signo-del-zodiaco-nid11062022/"
                >
                  <div
                    class="placeholder "
                  >
                    <img
                      alt="Qué personaje de la historia representa mejor a cada signo del Zodíaco"
                      class="com-image "
                      decoding="async"
                      height="513"
                      importance="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/_rsYJAUE32VkmiK5RMa4GzONwK4=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2RPWGT3YGNEBNEEYAALVWGX3HU.jpg"
                      srcset="https://resizer.glanacion.com/resizer/0wR7Z-alxXX59KR5dVn1L7cID-c=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2RPWGT3YGNEBNEEYAALVWGX3HU.jpg 298w, https://resizer.glanacion.com/resizer/Qfko_VEXtU0DC74DoCJJ4tOg0XA=/318x212/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2RPWGT3YGNEBNEEYAALVWGX3HU.jpg 318w, https://resizer.glanacion.com/resizer/_rsYJAUE32VkmiK5RMa4GzONwK4=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2RPWGT3YGNEBNEEYAALVWGX3HU.jpg 233w, https://resizer.glanacion.com/resizer/C-eb-S4O05KTERD7oj8jihH2mGk=/375x250/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2RPWGT3YGNEBNEEYAALVWGX3HU.jpg 375w, https://resizer.glanacion.com/resizer/5xZbYwUBjsxoAq27attSe2dW3VQ=/320x213/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2RPWGT3YGNEBNEEYAALVWGX3HU.jpg 320w"
                      width="768"
                    />
                  </div>
                </a>
              </figure>
            </section>
            
          </div>
          <section
            class="mod-description"
          >
            
            <h2
              class="com-title --xs"
            >
              <a
                class="com-link"
                href="/horoscopo/que-personaje-de-la-historia-representa-mejor-a-cada-signo-del-zodiaco-nid11062022/"
                title="De Marilyn Monroe a Ghandi. Qué personaje de la historia representa mejor a cada signo del Zodíaco"
              >
                <em
                  class="com-lead"
                >
                  De Marilyn Monroe a Ghandi. 
                </em>
                Qué personaje de la historia representa mejor a cada signo del Zodíaco
              </a>
            </h2>
            <div />
            
          </section>
        </article>
        <article
          class="mod-article toi2 nidE777LA4DCVAJNHIFHKT42ARJME"
          data-event="LinkClick"
          data-id="E777LA4DCVAJNHIFHKT42ARJME"
          data-notaid="E777LA4DCVAJNHIFHKT42ARJME"
          data-pos="toi2"
          data-section="inverse-home"
          data-source="editor"
        >
          <div
            class="content-media"
          >
            <section
              class="mod-media   "
              role="button"
            >
              <figure
                class="mod-figure --horizontal"
                role="button"
              >
                <a
                  href="/revista-hola/nueva-casa-en-punta-natalia-oreiro-en-un-terreno-de-2600-metros-cuadrados-construye-su-refugio-con-nid10062022/"
                >
                  <div
                    class="placeholder "
                  >
                    <img
                      alt="Natalia Oreiro construye en un terreno de 2600 metros cuadrados su refugio con vistas a Laguna del Sauce"
                      class="com-image "
                      decoding="async"
                      height="513"
                      importance="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/80qz2hgyflOcjKBrVAfN1lH5RRw=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FNC5RDVR4VHCZPXZYWXR67UY5U.jpg"
                      srcset="https://resizer.glanacion.com/resizer/P5g3BcG9oDYqViFmBBhx6jOGQtQ=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FNC5RDVR4VHCZPXZYWXR67UY5U.jpg 298w, https://resizer.glanacion.com/resizer/7ruciXeLlrxccH9vfGOasuyDMzU=/318x212/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FNC5RDVR4VHCZPXZYWXR67UY5U.jpg 318w, https://resizer.glanacion.com/resizer/80qz2hgyflOcjKBrVAfN1lH5RRw=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FNC5RDVR4VHCZPXZYWXR67UY5U.jpg 233w, https://resizer.glanacion.com/resizer/UCs--AG9jH9USQxQwcq_SdWweX8=/375x250/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FNC5RDVR4VHCZPXZYWXR67UY5U.jpg 375w, https://resizer.glanacion.com/resizer/SCXDCpLGexp9xGf9volo8eJgzXY=/320x213/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FNC5RDVR4VHCZPXZYWXR67UY5U.jpg 320w"
                      width="768"
                    />
                  </div>
                </a>
              </figure>
            </section>
            
          </div>
          <section
            class="mod-description"
          >
            
            <h2
              class="com-title --xs"
            >
              <a
                class="com-link"
                href="/revista-hola/nueva-casa-en-punta-natalia-oreiro-en-un-terreno-de-2600-metros-cuadrados-construye-su-refugio-con-nid10062022/"
                title="Nueva casa en Punta. Natalia Oreiro construye en un terreno de 2600 metros cuadrados su refugio con vistas a Laguna del Sauce"
              >
                <em
                  class="com-lead"
                >
                  Nueva casa en Punta. 
                </em>
                Natalia Oreiro construye en un terreno de 2600 metros cuadrados su refugio con vistas a Laguna del Sauce
              </a>
            </h2>
            <div />
            
          </section>
        </article>
        <article
          class="mod-article toi3 nidCBE2JAIHFRBZNJKRUOM3A3XCFA"
          data-event="LinkClick"
          data-id="CBE2JAIHFRBZNJKRUOM3A3XCFA"
          data-notaid="CBE2JAIHFRBZNJKRUOM3A3XCFA"
          data-pos="toi3"
          data-section="inverse-home"
          data-source="editor"
        >
          <div
            class="content-media"
          >
            <section
              class="mod-media   "
              role="button"
            >
              <figure
                class="mod-figure --horizontal"
                role="button"
              >
                <a
                  href="/lifestyle/donde-esta-el-segundo-tigre-el-desafio-visual-que-solo-el-1-logra-descubrir-nid10062022/"
                >
                  <div
                    class="placeholder "
                  >
                    <img
                      alt="¿Dónde está el segundo tigre? El desafío visual que solo el 1% logra descubrir"
                      class="com-image "
                      decoding="async"
                      height="513"
                      importance="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/xlIIu3x7g0SvKK56LyDAYHou3t4=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/BODWGDUWQVD7JOXSDJD2XSMDXU.jpg"
                      srcset="https://resizer.glanacion.com/resizer/GwkS3ApeooB4wIQQw4FlKZYQgZc=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/BODWGDUWQVD7JOXSDJD2XSMDXU.jpg 298w, https://resizer.glanacion.com/resizer/OSCrVEZObJPHj53WhQbr18ys4KQ=/318x212/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/BODWGDUWQVD7JOXSDJD2XSMDXU.jpg 318w, https://resizer.glanacion.com/resizer/xlIIu3x7g0SvKK56LyDAYHou3t4=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/BODWGDUWQVD7JOXSDJD2XSMDXU.jpg 233w, https://resizer.glanacion.com/resizer/xw9sWuimLuF9xB-Y4oFoj1R-3CI=/375x250/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/BODWGDUWQVD7JOXSDJD2XSMDXU.jpg 375w, https://resizer.glanacion.com/resizer/U8IARQNgag2MtgWKEQNbFbc9uRA=/320x213/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/BODWGDUWQVD7JOXSDJD2XSMDXU.jpg 320w"
                      width="768"
                    />
                  </div>
                </a>
              </figure>
            </section>
            
          </div>
          <section
            class="mod-description"
          >
            
            <h2
              class="com-title --xs"
            >
              <a
                class="com-link"
                href="/lifestyle/donde-esta-el-segundo-tigre-el-desafio-visual-que-solo-el-1-logra-descubrir-nid10062022/"
                title="Imposible. ¿Dónde está el segundo tigre? El desafío visual que solo el 1% logra descubrir"
              >
                <em
                  class="com-lead"
                >
                  Imposible. 
                </em>
                ¿Dónde está el segundo tigre? El desafío visual que solo el 1% logra descubrir
              </a>
            </h2>
            <div />
            
          </section>
        </article>
        <article
          class="mod-article toi4 nidTGAKMLOUL5CRHBOMNGE3ENB3QU"
          data-event="LinkClick"
          data-id="TGAKMLOUL5CRHBOMNGE3ENB3QU"
          data-notaid="TGAKMLOUL5CRHBOMNGE3ENB3QU"
          data-pos="toi4"
          data-section="inverse-home"
          data-source="editor"
        >
          <div
            class="content-media"
          >
            <section
              class="mod-media   "
              role="button"
            >
              <figure
                class="mod-figure --horizontal"
                role="button"
              >
                <a
                  href="/lifestyle/por-que-es-feriado-el-17-y-el-20-de-junio-en-la-argentina-nid10062022/"
                >
                  <div
                    class="placeholder "
                  >
                    <img
                      alt="¿Por qué es feriado el 17 y el 20 de junio en la Argentina?"
                      class="com-image "
                      decoding="async"
                      height="513"
                      importance="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/WexS2ihBMHzNTTkCnkPeQdXZCW4=/233x155/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VNNDYTONXJAZBJ4D4N355LX2NI.jpg"
                      srcset="https://resizer.glanacion.com/resizer/o_4XYrqgs6scyfYC1VA3L0vz98g=/298x198/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VNNDYTONXJAZBJ4D4N355LX2NI.jpg 298w, https://resizer.glanacion.com/resizer/TC43nZ-wcku28m2rCG0KWWHEP64=/318x212/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VNNDYTONXJAZBJ4D4N355LX2NI.jpg 318w, https://resizer.glanacion.com/resizer/WexS2ihBMHzNTTkCnkPeQdXZCW4=/233x155/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VNNDYTONXJAZBJ4D4N355LX2NI.jpg 233w, https://resizer.glanacion.com/resizer/lGgYNtzJ_sKti4Yf9dHBZLF1Xfg=/375x250/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VNNDYTONXJAZBJ4D4N355LX2NI.jpg 375w, https://resizer.glanacion.com/resizer/F4Y8SzkstiOy1L42uJgiuVm_SjM=/320x213/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VNNDYTONXJAZBJ4D4N355LX2NI.jpg 320w"
                      width="768"
                    />
                  </div>
                </a>
              </figure>
            </section>
            
          </div>
          <section
            class="mod-description"
          >
            
            <h2
              class="com-title --xs"
            >
              <a
                class="com-link"
                href="/lifestyle/por-que-es-feriado-el-17-y-el-20-de-junio-en-la-argentina-nid10062022/"
                title="Descanso. ¿Por qué es feriado el 17 y el 20 de junio en la Argentina?"
              >
                <em
                  class="com-lead"
                >
                  Descanso. 
                </em>
                ¿Por qué es feriado el 17 y el 20 de junio en la Argentina?
              </a>
            </h2>
            <div />
            
          </section>
        </article>
        <article
          class="mod-article toi5 nidFW7YPKHUI5EWPOXFBVXK6AOKEE"
          data-event="LinkClick"
          data-id="FW7YPKHUI5EWPOXFBVXK6AOKEE"
          data-notaid="FW7YPKHUI5EWPOXFBVXK6AOKEE"
          data-pos="toi5"
          data-section="inverse-home"
          data-source="editor"
        >
          <div
            class="content-media"
          >
            <section
              class="mod-media   "
              role="button"
            >
              <figure
                class="mod-figure --horizontal"
                role="button"
              >
                <a
                  href="/lifestyle/se-probo-un-vestido-en-una-famosa-tienda-y-tuvo-una-desopilante-reaccion-al-ver-como-le-quedo-nid10062022/"
                >
                  <div
                    class="placeholder "
                  >
                    <img
                      alt="Se probó un vestido en una famosa tienda y tuvo una desopilante reacción al ver cómo le quedó"
                      class="com-image "
                      decoding="async"
                      height="513"
                      importance="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/aJYtZpWuvCXPXCvpqDxh82OOlwo=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VZRLNMP4C5E3TM6XKSRQE4DXNM.jpg"
                      srcset="https://resizer.glanacion.com/resizer/HRUVcv52e2RMDegZwK8WyX0VQZA=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VZRLNMP4C5E3TM6XKSRQE4DXNM.jpg 298w, https://resizer.glanacion.com/resizer/E3VjmmSpZOWEsw0egDZTub859J8=/318x212/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VZRLNMP4C5E3TM6XKSRQE4DXNM.jpg 318w, https://resizer.glanacion.com/resizer/aJYtZpWuvCXPXCvpqDxh82OOlwo=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VZRLNMP4C5E3TM6XKSRQE4DXNM.jpg 233w, https://resizer.glanacion.com/resizer/kykwZMIMX2wI8yU7h2xAZz5vr5Y=/375x250/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VZRLNMP4C5E3TM6XKSRQE4DXNM.jpg 375w, https://resizer.glanacion.com/resizer/Y2NhBRin2fK2kmttvRlHQ8ZBFz4=/320x213/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VZRLNMP4C5E3TM6XKSRQE4DXNM.jpg 320w"
                      width="768"
                    />
                  </div>
                </a>
              </figure>
            </section>
            
          </div>
          <section
            class="mod-description"
          >
            
            <h2
              class="com-title --xs"
            >
              <a
                class="com-link"
                href="/lifestyle/se-probo-un-vestido-en-una-famosa-tienda-y-tuvo-una-desopilante-reaccion-al-ver-como-le-quedo-nid10062022/"
                title="Irónica. Se probó un vestido en una famosa tienda y tuvo una desopilante reacción al ver cómo le quedó"
              >
                <em
                  class="com-lead"
                >
                  Irónica. 
                </em>
                Se probó un vestido en una famosa tienda y tuvo una desopilante reacción al ver cómo le quedó
              </a>
            </h2>
            <div />
            
          </section>
        </article>
        <article
          class="mod-article toi6 nidZXSJWZ5ZANEEPK2O7AF7JDOFGI"
          data-event="LinkClick"
          data-id="ZXSJWZ5ZANEEPK2O7AF7JDOFGI"
          data-notaid="ZXSJWZ5ZANEEPK2O7AF7JDOFGI"
          data-pos="toi6"
          data-section="inverse-home"
          data-source="editor"
        >
          <div
            class="content-media"
          >
            <section
              class="mod-media   "
              role="button"
            >
              <figure
                class="mod-figure --horizontal"
                role="button"
              >
                <a
                  href="/revista-hola/soy-una-viuda-eterna-chloe-bello-habla-de-amor-de-los-lugares-oscuros-de-los-que-se-alejo-y-de-los-nid11062022/"
                >
                  <div
                    class="placeholder "
                  >
                    <img
                      alt="Chloé Bello, la ex novia de Cerati, habla de los lugares oscuros del pasado y los “hijos costumizados”"
                      class="com-image "
                      decoding="async"
                      height="513"
                      importance="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/5RoKEZNOa244wvSBYco5QW6t6Lc=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FUPAFXM6CNBXZLNIXVMAEZ3J4I.jpg"
                      srcset="https://resizer.glanacion.com/resizer/rcVpA1Dk1Flbwkcu5qSMUHgmWKQ=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FUPAFXM6CNBXZLNIXVMAEZ3J4I.jpg 298w, https://resizer.glanacion.com/resizer/ZT8plWvWIN6OY4tfrc1fTQiYVns=/318x212/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FUPAFXM6CNBXZLNIXVMAEZ3J4I.jpg 318w, https://resizer.glanacion.com/resizer/5RoKEZNOa244wvSBYco5QW6t6Lc=/233x155/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FUPAFXM6CNBXZLNIXVMAEZ3J4I.jpg 233w, https://resizer.glanacion.com/resizer/yQULqcdnZ_bOSUEr5_zWCFsq9l8=/375x250/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FUPAFXM6CNBXZLNIXVMAEZ3J4I.jpg 375w, https://resizer.glanacion.com/resizer/sLOcsHQ1kuS4hZtOiV7B0D50B_o=/320x213/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FUPAFXM6CNBXZLNIXVMAEZ3J4I.jpg 320w"
                      width="768"
                    />
                  </div>
                </a>
              </figure>
            </section>
            
          </div>
          <section
            class="mod-description"
          >
            
            <h2
              class="com-title --xs"
            >
              <a
                class="com-link"
                href="/revista-hola/soy-una-viuda-eterna-chloe-bello-habla-de-amor-de-los-lugares-oscuros-de-los-que-se-alejo-y-de-los-nid11062022/"
                title="Íntimas confesiones. Chloé Bello, la ex novia de Cerati, habla de los lugares oscuros del pasado y los “hijos costumizados”"
              >
                <em
                  class="com-lead"
                >
                  Íntimas confesiones. 
                </em>
                Chloé Bello, la ex novia de Cerati, habla de los lugares oscuros del pasado y los “hijos costumizados”
              </a>
            </h2>
            <div />
            
          </section>
        </article>
      </div>
    </section>
  </div>
</div>
`;
